【smell】优化部分代码异味