@@ -46,7 +46,6 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * @author : [wangminan]
@@ -313,7 +312,7 @@ public class ElasticSearchMapper extends SearchMapper {
         return ElasticSearchUtil.scrollSearch(searchRequestBuilder, clazz)
                 .stream()
                 .map(Metric::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
